--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,10 @@ a {
 
 /* Substring Matching Attribute Selectors ---- */
 
-
+a[href^="http://"]{
+  color: #52bab3;
+  text-decoration: none;
+}
 
 
 
