--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,18 @@ a {
 a[href^="http://"]{
   color: #52bab3;
   text-decoration: none;
+  background-repeat: no-repeat;
+  background-size: 18px 18px;
+  padding-left: 25px;
+}
+a[href$=".pdf"]{
+  background-image:url('../img/icn-pdf.svg');
+}
+a[href$=".jpg"]{
+  background-image:url('../img/icn-picture.svg');
+}
+a[href$=".zip"]{
+  background-image:url('../img/icn-zip.svg');
 }
 
 
